# neighborhood_analysis

./: .gitignore  README.md  README.rst  pyproject.toml
mn_neighborhoods/: nh_analysis.ipynb
mn_neighborhoods/data/: real_estate_data_2021_09.csv  twin_cities_neighborhoods.csv
tests/: test_mn_neighborhoods.py
